# fiap-fase04-business_analytics_petroleum_prices

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
business_analytics_fase04/: 01_load_pg_data.py  02_insights.py  insights.ipynb
