[tool.poetry]
name = "business-analytics-fase04"
version = "0.1.0"
description = ""
authors = ["Tadeu Tupinambá <tadeu.tupiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
chardet = "^5.2.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
